# CLASP

./: .gitignore  .vimrc  AUTHORS.md  CHANGES.md  CMakeLists.txt  FAQ.md  HISTORY.md  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  build_make.sh  clasp.vc10.sln  clasp.vc6.dsw  clean_cmake.sh  clean_make.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
examples/: CMakeLists.txt
examples/C/: CMakeLists.txt
examples/C++/: CMakeLists.txt
examples/C++/minimal_usage_xx/: CMakeLists.txt  main.cpp
examples/C/minimal_usage/: CMakeLists.txt  main.c
examples/cvu/: CMakeLists.txt
examples/cvu/prg/: CMakeLists.txt  implicit_link.c  prg.c
examples/cvu/prg.main/: CMakeLists.txt  implicit_link.c  prg.main.c
examples/cvu/prg.main/vc6/: prg.main.dsp
examples/cvu/prg/vc6/: prg.dsp
include/clasp/: clasp.h  clasp.hpp  implicit_link.h  main.h  main.hpp
include/clasp/internal/: shim_macros.h
include/clasp/util/: search_specifications.hpp  searchspecs.h
include/systemtools/: clasp.hpp
include/systemtools/clasp/: clasp.h  clasp.hpp  implicit_link.h  main.h  main.hpp
include/systemtools/clasp/internal/: shim_macros.h
include/systemtools/clasp/internal-/: shim_macros.h
include/systemtools/clasp/util/: search_specifications.hpp  searchspecs.h
projects/clasp.core/: CMakeLists.txt
projects/clasp.core/vc10/: clasp.core.vcxproj  clasp.core.vcxproj.filters
projects/clasp.core/vc6/: clasp.core.dsp
projects/vcprops/: CLASP.common.props  CLASP.example.props  CLASP.test.Catch.props  CLASP.test.common.props  CLASP.test.scratch.props  CLASP.test.xTests.props
src/: CMakeLists.txt  clasp.api.c  clasp.core.c  clasp.diagnostics.c  clasp.internal.h  clasp.memory.c  clasp.string.c  clasp.usage.FILE.c  clasp.usage.c
src/searchspecs/: searchspecs.c
test/: CMakeLists.txt
test/component/: CMakeLists.txt  test.component.vc10.sln  test.component.vc6.dsw
test/component/test.component.searchspecs.C/: CMakeLists.txt  entry.c  implicit_link.c  test.component.searchspecs.C.c
test/component/test.component.searchspecs.C/vc10/: test.component.usage.searchspecs.C.vcxproj  test.component.usage.searchspecs.C.vcxproj.filters
test/component/test.component.searchspecs.C/vc6/: test.component.searchspecs.C.dsp
test/component/test.component.usage.resources.C/: CMakeLists.txt  entry.c  implicit_link.c  resource.h  test.component.usage.resources.C.c  test.component.usage.resources.rc
test/component/test.component.usage.resources.C/vc10/: test.component.usage.resources.C.vcxproj  test.component.usage.resources.C.vcxproj.filters
test/component/test.component.usage.resources.C/vc6/: test.component.usage.resources.C.dsp
test/scratch/: CMakeLists.txt
test/scratch/C/: CMakeLists.txt  test.scratch.C.vc6.dsw
test/scratch/C/test.scratch.C.version/: CMakeLists.txt  implicit_link.c  main.c  test.scratch.C.version.c
test/scratch/C/test.scratch.C.version/vc10/: test.scratch.C.version.vcxproj  test.scratch.C.version.vcxproj.filters
test/scratch/C/test.scratch.C.version/vc6/: test.scratch.C.version.dsp
test/unit/: CMakeLists.txt  test.unit.vc6.dsw
test/unit/test.unit.clasp++/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.unit.clasp++.cpp
test/unit/test.unit.clasp++/vc10/: test.unit.clasp++.vcxproj  test.unit.clasp++.vcxproj.filters
test/unit/test.unit.clasp++/vc6/: test.unit.clasp++.dsp
test/unit/test.unit.custom_types/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.unit.custom_types.cpp
test/unit/test.unit.custom_types/_dev_pragmatics_/: warnings.msvc.10+.h
test/unit/test.unit.custom_types/vc10/: test.unit.custom_types.vcxproj  test.unit.custom_types.vcxproj.filters
test/unit/test.unit.custom_types/vc6/: test.unit.custom_types.dsp
test/unit/test.unit.main.exceptions/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.unit.main.exceptions.cpp
test/unit/test.unit.main.exceptions/vc10/: test.unit.main.exceptions.vcxproj  test.unit.main.exceptions.vcxproj.filters
test/unit/test.unit.main.exceptions/vc6/: test.unit.main.exceptions.dsp
test/unit/test.unit.main.programname.1/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.unit.main.programname.1.cpp
test/unit/test.unit.main.programname.1/_dev_pragmatics_/: warnings.msvc.10+.h
test/unit/test.unit.main.programname.1/vc10/: test.unit.main.programname.vcxproj  test.unit.main.programname.vcxproj.filters
test/unit/test.unit.main.programname.1/vc6/: test.unit.main.programname.1.dsp
test/unit/test.unit.parseapi.bitflags/: CMakeLists.txt  entry.c  implicit_link.c  test.unit.parseapi.bitflags.c
test/unit/test.unit.parseapi.bitflags/vc10/: test.unit.parseapi.bitflags.vcxproj  test.unit.parseapi.bitflags.vcxproj.filters
test/unit/test.unit.parseapi.bitflags/vc6/: test.unit.parseapi.bitflags.dsp
test/unit/test.unit.parseapi.findflagoroption/: CMakeLists.txt  entry.c  implicit_link.c  test.unit.parseapi.findflagoroption.c
test/unit/test.unit.parseapi.findflagoroption/vc10/: test.unit.parseapi.findflagoroption.vcxproj  test.unit.parseapi.findflagoroption.vcxproj.filters
test/unit/test.unit.parseapi.findflagoroption/vc6/: test.unit.parseapi.findflagoroption.dsp
test/unit/test.unit.usage_width/: CMakeLists.txt  entry.cpp  implicit_link.cpp  pch.hpp  test.unit.usage_width.cpp
test/unit/test.unit.usage_width/_dev_pragmatics_/: warnings.msvc.10+.h
test/unit/test.unit.usage_width/vc10/: test.unit.usage_width.vcxproj  test.unit.usage_width.vcxproj.filters
test/unit/test.unit.usage_width/vc6/: test.unit.usage_width.dsp
