
add_subdirectory(test.unit.clasp++)
add_subdirectory(test.unit.custom_types)
add_subdirectory(test.unit.main.exceptions)
add_subdirectory(test.unit.main.programname.1)
add_subdirectory(test.unit.parseapi.bitflags)
add_subdirectory(test.unit.parseapi.findflagoroption)
add_subdirectory(test.unit.usage_width)

# ############################## end of file ############################# #

